# codex-swap

./: .gitignore  LICENSE  README.md  pyproject.toml
src/codex_swap/: __init__.py  auth.py  autoswitch.py  cli.py  oauth.py  paths.py  session.py  store.py  switcher.py  usage.py  wham.py
